--- a/app/src/main/res/layout/fragment_writeemail.xml
+++ b/app/src/main/res/layout/fragment_writeemail.xml
@@ -82,6 +82,7 @@
                         android:background="@drawable/shape_rounded_bg"
                         android:hint="输入用户名(多个用户回车分隔)"
                         android:inputType="text|textMultiLine"
+                        android:textSize="13sp"
                         android:minHeight="35dp"
                         android:paddingBottom="2dp"
                         android:paddingLeft="2dp"
@@ -124,6 +125,7 @@
                     android:background="@drawable/shape_rounded_bg"
                     android:gravity="center_vertical|left"
                     android:hint="请输入标题"
+                    android:textSize="13sp"
                     android:inputType="text|textMultiLine"
                     android:padding="2dp"
                     android:singleLine="true"
@@ -144,6 +146,7 @@
                 android:background="@drawable/shape_rounded_bg"
                 android:gravity="top"
                 android:hint="请输入发件内容....."
+                android:textSize="13sp"
                 android:inputType="textMultiLine"
                 android:maxLines="6"
                 android:minLines="5"
@@ -153,27 +156,40 @@
         </LinearLayout>
     </com.goldenasia.lottery.component.CustomScrollView>
 
+    <View
+        android:layout_above="@+id/ll_btn"
+        android:layout_width="match_parent"
+        android:layout_height="1.0px"
+        android:background="@color/gray" />
+
     <LinearLayout
+        android:id="@+id/ll_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/app_main_dark"
         android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@drawable/button_login"
+            android:background="@drawable/notidialog_leftbtn_selector"
             android:text="取消"
             android:textColor="@android:color/white" />
 
+        <View android:id="@+id/alert_dialog_view"
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
+
         <Button
             android:id="@+id/submit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:background="@drawable/button_login"
+            android:background="@drawable/notidialog_rightbtn_selector"
             android:text="发送"
             android:textColor="@android:color/white" />
     </LinearLayout>
