--- a/app/src/main/res/layout/activity_umessage.xml
+++ b/app/src/main/res/layout/activity_umessage.xml
@@ -43,7 +43,7 @@
     </RelativeLayout>
 
 
-    <TextView
+  <!--  <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
-        android:text="消息描述 :" />
+        android:text="消息描述 :" />-->
 
     <TextView
         android:layout_width="match_parent"
