--- a/app/src/main/res/layout/fragment_push_notification.xml
+++ b/app/src/main/res/layout/fragment_push_notification.xml
@@ -54,7 +54,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:gravity="center_vertical"
-            android:text="中奖通知" />
+            android:text="推送通知" />
 
         <Switch
             android:id="@+id/switch_win"
@@ -71,6 +71,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:visibility="gone"
         android:background="@color/white">
 
         <TextView
@@ -90,7 +91,8 @@
 
     </RelativeLayout>
 
-    <View style="@style/horizontal_divide_line" />
+    <View style="@style/horizontal_divide_line"
+        android:visibility="gone"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -120,6 +122,7 @@
 
     <View
         style="@style/horizontal_divide_line"
+        android:visibility="gone"
         android:layout_marginTop="20dp" />
 
     <RelativeLayout
@@ -128,6 +131,7 @@
         android:layout_height="40dp"
         android:background="@color/white"
         android:clickable="true"
+        android:visibility="gone"
         android:descendantFocusability="blocksDescendants">
 
         <TextView
