--- a/app/src/main/res/layout/fragment_message_box.xml
+++ b/app/src/main/res/layout/fragment_message_box.xml
@@ -11,7 +11,7 @@
         style="@style/tabUserItemLinearLayout">
         <ImageView
             android:id="@+id/in_box_text_img"
-            android:src="@drawable/touzhu_icon"
+            android:src="@drawable/inbox_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -20,10 +20,25 @@
 
         <TextView
             android:id="@+id/in_box_text"
+            android:layout_toRightOf="@+id/in_box_text_img"
             android:layout_width="wrap_content"
-            style="@style/tabUserItemText"
-            android:layout_marginLeft="15dp"
+            android:layout_height="52dp"
+            android:layout_marginLeft="0dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"
             android:text="收件箱"/>
+
+        <TextView
+            android:id="@+id/in_box_badge"
+            android:layout_toRightOf="@+id/in_box_text"
+            android:layout_width="15dp"
+            android:layout_height="52dp"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            />
+
         <ImageView
             android:id="@+id/tabUserItemTextArr"
             style="@style/tabUserItemImgArrow" />
@@ -37,7 +52,7 @@
         style="@style/tabUserItemLinearLayout">
         <TextView
             style="@style/tabUserItemText"
-            android:drawableLeft="@drawable/zhuihao_icon"
+            android:drawableLeft="@drawable/outbox_icon"
             android:text="发件箱"/>
         <ImageView style="@style/tabUserItemImgArrow" />
     </RelativeLayout>
@@ -50,7 +65,7 @@
         style="@style/tabUserItemLinearLayout">
         <TextView
             style="@style/tabUserItemText"
-            android:drawableLeft="@drawable/report_icon"
+            android:drawableLeft="@drawable/writeemail_icon"
             android:text="发邮件"/>
         <ImageView style="@style/tabUserItemImgArrow" />
     </RelativeLayout>
