1.启动界面查询信息数量，2.主界面更新数量，3.我的界面更新数量，4.站内信更新数量，5.收件箱更新数量，6. 界面推出更新数量，7.开启Service

--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -11,38 +11,53 @@
         android:layout_weight="1">
     </android.support.v4.view.ViewPager>
 
-    <View style="@style/horizontal_divide_line"/>
+    <View
+        style="@style/horizontal_divide_line"/>
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="match_parent"
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/gray">
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/btn_home"
-            style="@style/tab_radio_button"
-            android:drawableTop="@drawable/selector_tab_home"
-            android:text="主页"/>
+            <RadioButton
+                android:id="@+id/btn_home"
+                style="@style/tab_radio_button"
+                android:drawableTop="@drawable/selector_tab_home"
+                android:text="主页"/>
 
-        <!--<RadioButton
-            android:id="@+id/btn_classify"
-            style="@style/tab_radio_button"
-            android:drawableTop="@drawable/selector_tab_trend"
-            android:text="开奖走势"
-            android:visibility="gone"/>-->
+            <!--<RadioButton
+                android:id="@+id/btn_classify"
+                style="@style/tab_radio_button"
+                android:drawableTop="@drawable/selector_tab_trend"
+                android:text="开奖走势"
+                android:visibility="gone"/>-->
 
-        <RadioButton
-            android:id="@+id/btn_discover"
-            style="@style/tab_radio_button"
-            android:drawableTop="@drawable/selector_tab_history"
-            android:text="游戏记录"/>
+            <RadioButton
+                android:id="@+id/btn_discover"
+                style="@style/tab_radio_button"
+                android:drawableTop="@drawable/selector_tab_history"
+                android:text="游戏记录"/>
 
-        <RadioButton
-            android:id="@+id/btn_me"
-            style="@style/tab_radio_button"
-            android:drawableTop="@drawable/selector_tab_mine"
-            android:text="我的"/>
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/btn_me"
+                style="@style/tab_radio_button"
+                android:drawableTop="@drawable/selector_tab_mine"
+                android:text="我的"/>
+        </RadioGroup>
+        <TextView
+            android:id="@+id/badge_view"
+            android:layout_alignParentRight="true"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            />
+
+    </RelativeLayout>
+
 
 </LinearLayout>
