--- a/app/src/main/res/layout/fragment_outbox.xml
+++ b/app/src/main/res/layout/fragment_outbox.xml
@@ -54,6 +54,23 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <RelativeLayout
+        android:id="@+id/empty_show"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        >
+        <TextView
+            android:id="@android:id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="暂无邮件"
+            android:textSize="@dimen/title_text_size" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/ll_edit"
         android:layout_width="match_parent"
         android:layout_height="48dp"
