--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -42,11 +42,11 @@
 
     </android.support.v7.widget.LinearLayoutCompat>
 
-    <TextView
+<!--    <TextView
         android:id="@+id/overlay_badge"
         android:layout_width="23dp"
         android:background="#00000000"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
 
     <TextView
         android:id="@+id/time"
