--- a/app/src/main/res/layout/fragment_game_method_info_shishicai.xml
+++ b/app/src/main/res/layout/fragment_game_method_info_shishicai.xml
@@ -11,6 +11,18 @@
         android:padding="20dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_taiwan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="left"
+            android:text="“台湾5分彩”以台湾非常流行的官方彩种“台湾宾果”为开奖源，“台湾宾果”开奖号码共20个，按照从小到大的顺序，从第4个号码至第18个号码，每3个号码作为一组统计和值，并以和值的“个位”数字作为“台湾5分彩”的对应开奖结果。"
+            android:textColor="@color/app_font_dark_color"
+            android:layout_marginBottom="5dp"
+            android:visibility="gone"
+            android:textSize="14sp" />
+
         <!--特码-->
         <LinearLayout
             android:id="@+id/te_ma"
