--- a/app/src/main/res/layout/popup_write_comment.xml
+++ b/app/src/main/res/layout/popup_write_comment.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <include
+        android:id="@+id/digit"
+        android:visibility="gone"
+        layout="@layout/digits_panel" />
+
     <EditText
         android:id="@+id/input_multiline_text"
         android:layout_width="match_parent"
