--- a/app/src/main/res/layout/fragment_golden_login.xml
+++ b/app/src/main/res/layout/fragment_golden_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">
@@ -18,6 +19,7 @@
     </LinearLayout>-->
 
     <LinearLayout
+        android:id="@+id/ll_forget_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -118,50 +120,91 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"/>
 
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/forget_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:text="@string/forget_password"
+                android:gravity="center_horizontal"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="16sp"/>
-            <TextView
-                android:id="@+id/contact_customer_service"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
-                android:background="@android:color/transparent"
-                android:drawableLeft="@drawable/contactservice_selector"
-                android:drawablePadding="5dp"
-                android:text="联系客服"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="16sp"/>
+                android:gravity="center">
+
+                <CheckBox
+                    android:id="@+id/checkbox_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="记住密码"
+                    android:paddingLeft="5dp"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:button="@drawable/checkbox_login_bg_selector"
+                    android:background="@android:color/transparent"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/contactservice_selector" />
+
+                <TextView
+                    android:id="@+id/contact_customer_service"
+                    android:layout_width="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:background="@android:color/transparent"
+                    android:text="联系客服"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <CheckBox
+                android:id="@+id/save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住密码"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
 
-        <CheckBox
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="保存密码"/>
-    </LinearLayout>
 
 </FrameLayout>
