--- a/app/src/main/res/layout/chase_mmc_listview_fragment.xml
+++ b/app/src/main/res/layout/chase_mmc_listview_fragment.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:maxHeight="200dip"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tip_award"
+
+
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/app_main"
-        android:gravity="center"
         android:minHeight="100dp"
-        android:text="恭喜中奖 0 元"
-        android:textColor="@color/text_shallow"
-        android:textSize="36sp" />
+        >
+
+
+        <ImageView
+            android:id="@+id/imageView_exit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/exit_pressed" />
+
+        <TextView
+            android:id="@+id/tip_award"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView_exit"
+            android:layout_centerInParent="true"
+            android:text="恭喜中奖 0 元"
+            android:textColor="@color/text_shallow"
+            android:textSize="36sp" />
+
+    </RelativeLayout>
+
+
 
     <LinearLayout
         android:id="@+id/winners_layout"
