--- a/app/src/main/res/layout/pick_shandongkuailepuke_baoxuan.xml
+++ b/app/src/main/res/layout/pick_shandongkuailepuke_baoxuan.xml
@@ -29,7 +29,7 @@
             >
 
             <Button
-                android:id="@+id/pick_column_all"
+                android:id="@+id/sdklpk_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="全"
@@ -38,7 +38,7 @@
                 android:background="@null"/>
 
             <Button
-                android:id="@+id/pick_column_clear"
+                android:id="@+id/sdklpk_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@drawable/pink_number_button_text_color"
@@ -57,7 +57,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         >
 
         <ImageView
@@ -66,6 +66,7 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:clickable="true"
+            android:tag="同花包选"
             android:src="@drawable/thbx"
             android:background="@drawable/sdklpk_bx_selector"/>
 
@@ -77,6 +78,7 @@
             android:layout_marginRight="10dp"
             android:padding="2dp"
             android:clickable="true"
+            android:tag="顺子包选"
             android:src="@drawable/szbx"
             android:background="@drawable/sdklpk_bx_selector"/>
 
@@ -86,6 +88,7 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:clickable="true"
+            android:tag="同花顺包选"
             android:src="@drawable/thsbx"
             android:background="@drawable/sdklpk_bx_selector"/>
 
@@ -107,6 +110,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:padding="2dp"
+            android:tag="豹子包选"
             android:src="@drawable/bzbx"
             android:background="@drawable/sdklpk_bx_selector"/>
 
@@ -119,10 +123,59 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:clickable="true"
+            android:tag="对子包选"
             android:src="@drawable/dzbx"
             android:background="@drawable/sdklpk_bx_selector"/>
 
 
+    </LinearLayout>
+
+    <!--为了使ButterKnife加载图片时候不报错而添加的-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
+        <ImageView
+            android:id="@+id/image_01_06"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_07"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_08"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_09"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_10"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_11"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_12"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
+        <ImageView
+            android:id="@+id/image_01_13"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />
     </LinearLayout>
 
 </RelativeLayout>
