山东快乐扑克玩法界面修改

--- a/app/src/main/res/layout/pick_shandongkuailepuke_duizi.xml
+++ b/app/src/main/res/layout/pick_shandongkuailepuke_duizi.xml
@@ -64,7 +64,7 @@
             android:id="@+id/image_01_01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dza"
@@ -74,7 +74,7 @@
             android:id="@+id/image_01_02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz2"
@@ -83,7 +83,7 @@
             android:id="@+id/image_01_03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz3"
@@ -92,7 +92,7 @@
             android:id="@+id/image_01_04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz4"
@@ -114,7 +114,7 @@
             android:id="@+id/image_01_05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz5"
@@ -124,7 +124,7 @@
             android:id="@+id/image_01_06"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz6"
@@ -134,7 +134,7 @@
             android:id="@+id/image_01_07"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz7"
@@ -143,7 +143,7 @@
             android:id="@+id/image_01_08"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz8"
@@ -165,7 +165,7 @@
             android:id="@+id/image_01_09"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz9"
@@ -174,7 +174,7 @@
             android:id="@+id/image_01_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dz10"
@@ -183,7 +183,7 @@
             android:id="@+id/image_01_11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dzj"
@@ -193,7 +193,7 @@
             android:id="@+id/image_01_12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dzq"
@@ -210,18 +210,45 @@
         android:layout_below="@+id/ll_2_3"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         >
         <ImageView
             android:id="@+id/image_01_13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/sdklpk_bx_selector"
+            android:background="@drawable/sdklpk_dz_selector"
             android:clickable="true"
             android:padding="2dp"
             android:src="@drawable/dzk"
             android:tag="KK" />
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/sdklpk_dz_selector"
+            android:clickable="true"
+            android:padding="2dp"
+            android:src="@drawable/dzk"
+            android:visibility="invisible"
+            android:tag="KK" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/sdklpk_dz_selector"
+            android:clickable="true"
+            android:padding="2dp"
+            android:src="@drawable/dzk"
+            android:visibility="invisible"
+            android:tag="KK" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/sdklpk_dz_selector"
+            android:clickable="true"
+            android:padding="2dp"
+            android:src="@drawable/dzk"
+            android:visibility="invisible"
+            android:tag="KK" />
     </LinearLayout>
 
 </RelativeLayout>
