--- a/app/src/main/res/layout/manager_title_timing_view.xml
+++ b/app/src/main/res/layout/manager_title_timing_view.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center_vertical"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_weight="1">
             <LinearLayout
                 android:layout_width="0dp"
